Bug 746529 - Truncate milliseconds after 3 digits r=arai

Previously, we would round up on the 17th digit, this change was made
for Chrome parity.

Differential Revision: https://phabricator.services.mozilla.com/D193345